--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -180,7 +180,7 @@
                                             <div class="row">
                                                 <div class="col-6">
                                                     <label>Monto <span class="campo-obligatorio">*</span></label>
-                                                    <input type="text" class="form-control" name="monto" placeholder="0.00" value="{{ d.monto }}" required value="{{ form_d.monto if form_data else '' }}" id="montoInput">
+                                                    <input type="text" class="form-control" name="monto" placeholder="0.00" value="{{ d.monto }}" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
                                                 </div>
 
                                                 <script>
