--- a/src/templates/listado.html
+++ b/src/templates/listado.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+ 
     {% block title %}Mis alumnos{% endblock %}
     
 </head>
@@ -72,7 +71,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <form action="/editar/{{ d.id }}" method="POST">
+                                            <form action="/editar/{{ d.id }}" method="POST" onsubmit="return validarFormulario()">
                                                 
                                                     <div class="row">
                                                         <div class="col">
@@ -102,7 +101,7 @@
                                                         </div>            
                                                         <div class="col">
                                                             <label class="label-form">Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
-                                                            <input type="date" class="form-control mb-3" name="fecha_nacimiento" value="{{ d.fecha_nacimiento }}" required>
+                                                            <input type="date" class="form-control mb-3" name="fecha_nacimiento" id="fecha_nacimiento"  value="{{ d.fecha_nacimiento }}" required>
                                                             <div id="fecha-nacimiento-error" class=" error-message"></div> 
                                                         </div>                                    
                                                         <div class="col">
@@ -181,45 +180,46 @@
             </div>
         </div>   
         <!-- VALIDACIONES -->
-        <script>
-            function limitarDigitosDNI() {
-                var dniInput = document.getElementById('dni');
-        
-                // Obtén el valor del campo del DNI
-                var dniValue = dniInput.value;
-        
-                // Verifica si la longitud del DNI es mayor a 8
-                if (dniValue.length > 8) {
-                    // Corta el valor del DNI a los primeros 8 dígitos
-                    dniInput.value = dniValue.slice(0, 8);
-                }
+    
+
+    <script>
+        function validarLongitudDNI() {
+            var dniInput = document.getElementById('dni');
+
+            // Obtén el valor del campo del DNI
+            var dniValue = dniInput.value;
+
+            // Verifica si la longitud del DNI es diferente de 8
+            if (dniValue.length !== 8) {
+                // Muestra una Sweet Alert indicando el error
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'El DNI debe tener 8 dígitos',
+                });
+
+                // Devuelve false para evitar que el formulario se envíe
+                return false;
             }
-        </script>
-        
-        <script>
-            function validarLongitudDNI() {
-                var dniInput = document.getElementById('dni');
-        
-                // Obtén el valor del campo del DNI
-                var dniValue = dniInput.value;
-        
-                // Verifica si la longitud del DNI es menor a 8
-                if (dniValue.length < 8) {
-                    // Muestra una Sweet Alert indicando el error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'El DNI debe contener al menos 8 dígitos',
-                    });
-        
-                    // Devuelve false para evitar que el formulario se envíe
-                    return false;
-                }
-        
-                // Devuelve true para permitir que el formulario se envíe
-                return true;
-            }
-        </script>
+
+            // Devuelve true para permitir que el formulario se envíe
+            return true;
+        }
+
+    function validarFormulario() {
+        // Llama a la función de validación de longitud del DNI
+        if (!validarLongitudDNI()) {
+            // Si la validación no pasa, devuelve false para evitar que el formulario se envíe
+            return false;
+        }
+
+        // Aquí puedes agregar otras validaciones si es necesario
+
+        // Devuelve true para permitir que el formulario se envíe
+        return true;
+    }
+    </script>
+ 
         <script>
             function validarColegio() {
                 var colegioInput = document.getElementById('colegio');
@@ -244,117 +244,7 @@
             var colegioInput = document.getElementById('colegio');
             colegioInput.addEventListener('input', validarColegio);
         </script>
-
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-            function validarCampo(inputId, errorId, mensajeError, regex) {
-            var input = document.getElementById(inputId);
-            var error = document.getElementById(errorId);
-
-            input.addEventListener('input', function() {
-                var valor = input.value.trim();
-
-                if (!regex.test(valor)) {
-                    error.style.display = 'block';
-                    error.textContent = mensajeError;
-                } else {
-                    error.style.display = 'none';
-                }
-            });
-        }
-
-        // Expresión regular para validar que el campo de teléfono contiene solo números
-        var numerosRegex = /^[0-9]+$/;
-
-        // Expresión regular para validar que los campos de nombre y apellido contienen solo letras y espacios
-        var letrasRegex = /^[a-zA-Z\s]*$/;
-
-        // Llama a la función de validación para el campo de nombre
-        validarCampo('nombre', 'nombre-error', 'El nombre solo debe contener letras y espacios.', letrasRegex);
-
-        // Llama a la función de validación para el campo de apellido
-        validarCampo('apellido', 'apellido-error', 'El apellido solo debe contener letras y espacios.', letrasRegex);
-
-
-        // Llama a la función de validación para el campo de nombre del tutor
-        validarCampo('nombre_titular', 'nombre-titular-error', 'El nombre del tutor solo debe contener letras y espacios.', letrasRegex);
-
-
-        var fechaNacimientoInput = document.getElementById('fecha_nacimiento');
-        var fechaNacimientoError = document.getElementById('fecha-nacimiento-error');
-        var fechaInicioInput = document.getElementById('fecha_inicio');
-        var fechaInicioError = document.getElementById('fecha-inicio-error');
-
-        // Expresión regular para validar que el campo de fecha de nacimiento tiene el formato correcto (YYYY-MM-DD)
-        var fechaRegex = /^\d{4}-\d{2}-\d{2}$/;
-
-        validarCampo('fecha_nacimiento', 'fecha-nacimiento-error', 'Por favor, ingresa una fecha válida (YYYY-MM-DD).', fechaRegex);
-
-        fechaNacimientoInput.addEventListener('input', function() {
-            var fechaNacimiento = new Date(fechaNacimientoInput.value);
-            var fechaActual = new Date();
-            var fechaHace6Anios = new Date();
-            fechaHace6Anios.setFullYear(fechaActual.getFullYear() - 6);
-
-            if (isNaN(fechaNacimiento.getTime())) {
-                fechaNacimientoError.textContent = 'Por favor, ingresa una fecha válida.';
-                fechaNacimientoError.style.display = 'block';
-            } else {
-                fechaNacimientoError.style.display = 'none';
-
-                if (fechaNacimiento >= fechaActual) {
-                    fechaNacimientoError.textContent = 'La fecha de nacimiento no puede ser la fecha actual.';
-                    fechaNacimientoError.style.display = 'block';
-                } else if (fechaNacimiento >= fechaHace6Anios) {
-                    fechaNacimientoError.textContent = 'La fecha de nacimiento debe ser anterior a los últimos 6 años.';
-                    fechaNacimientoError.style.display = 'block';
-                } else {
-                    fechaNacimientoError.style.display = 'none';
-
-                    // Validación en comparación con la fecha de inicio
-                    var fechaInicio = new Date(fechaInicioInput.value);
-                    if (fechaInicio <= fechaNacimiento) {
-                        fechaInicioError.textContent = 'La fecha de inicio debe ser posterior a la fecha de nacimiento.';
-                        fechaInicioError.style.display = 'block';
-                    } else {
-                        fechaInicioError.style.display = 'none';
-                    }
-                }
-            }
-        });
-
-        fechaInicioInput.addEventListener('input', function() {
-            // Validación en comparación con la fecha de nacimiento
-            var fechaNacimiento = new Date(fechaNacimientoInput.value);
-            var fechaInicio = new Date(fechaInicioInput.value);
-
-            if (fechaInicio <= fechaNacimiento) {
-                fechaInicioError.textContent = 'La fecha de inicio debe ser posterior a la fecha de nacimiento.';
-                fechaInicioError.style.display = 'block';
-            } else {
-                fechaInicioError.style.display = 'none';
-            }
-        });
-
-        });
-
-    </script>
-    
-    <script>
-        function validarLetras(input) {
-            // Reemplaza todo lo que no sea una letra con una cadena vacía
-            input.value = input.value.replace(/[^a-zA-Z]/g, '');
-    
-            // Puedes mostrar un mensaje de error si se ingresan caracteres no permitidos
-            var errorDivId = input.id + "-error";
-            var errorDiv = document.getElementById(errorDivId);
-            if (input.value.match(/[^a-zA-Z]/g)) {
-                errorDiv.innerHTML = "Solo se permiten letras.";
-            } else {
-                errorDiv.innerHTML = "";
-            }
-        }
-    </script>
+ 
 
     <!-- SCRIPT BUSCADOR -->
         <script>
@@ -431,6 +321,8 @@
                     });
                 }
             </script>   
-    {% endblock %}              
+           
+    {% endblock %}           
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>   
 </body>             
                             
