--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Telefono <span class="campo-obligatorio">*</span></label>
-                                <input type="number" class="form-control mb-3" name="telefono" id="telefono" pattern="[0-9]+"  required value="{{ form_data.telefono if form_data else '' }}">
+                                <input type="number" class="form-control mb-3" name="telefono" id="telefono" maxlength="10"  required value="{{ form_data.telefono if form_data else '' }}">
                                 <div id="telefono-error" class=" error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
