--- a/src/templates/listado.html
+++ b/src/templates/listado.html
@@ -96,7 +96,7 @@
                                                     <div class="row">
                                                         <div class="col">
                                                             <label class="label-form">Telefono <span class="campo-obligatorio">*</span></label>
-                                                            <input type="number" class="form-control mb-3" name="telefono" maxlength="10" value="{{ d.telefono }}" required>
+                                                            <input type="tel" class="form-control mb-3" name="telefono" maxlength="10" value="{{ d.telefono }}" required>
                                                             <div id="telefono-error" class=" error-message"></div> 
                                                         </div>            
                                                         <div class="col">
