--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -19,8 +19,6 @@ body {
 .top-bar img {
   margin-right: 10px; 
 }
-
-
 .form-signin {
   width: 100%;
   height: 30em;
@@ -29,26 +27,22 @@ body {
   background-color: #92BD89;
   border-radius: 0.5em;
 }
-
 .input-login{
   height: 2.5em !important;
   border-radius: 1em;
   border: none;
   background-color: #f5f5f5;
 }
-
 .txt-login{
   color: #ffff;
   font-weight: 300;
   font-size: 1.5em;
 }
-
 .btn-login{
   background-color: #FBD374;
   color: #ffff;
   border-radius: 1em;
   border: none;
-
 }
 .perfil-container {
   display: flex;
@@ -56,7 +50,6 @@ body {
   align-items: center;
 
 }
-
 .img-perfil{
   background-color: #FBD374;
   border-radius: 3em;
@@ -69,21 +62,19 @@ body {
   color: #f0f0f0;
   margin-top: 10rem;
 }
+
 /*Home*/
 
 .navbar {
   background-color: #7ea56a;
 }
-
 .text-navbar{
   color: #f5f5f5;
   text-decoration: none;
-
 }
 .link-home {
   text-decoration: none !important;
   color: #333333;
-
 }
 .navbar img {
   float: left;
@@ -137,13 +128,12 @@ body {
   padding: 5px;
   border: 1px solid #7ea56a;
   border-radius: 4px;
-  top: -7rem; /* Coloca el mensaje encima del campo de entrada */ 
+  top: -7rem; 
   margin-left: 0; 
   font-size: 14px;
 }
 
-/* Añade un pequeño triángulo apuntando hacia abajo para indicar el error */
-.error-message::after { /* Cambia ::before a ::after */
+.error-message::after {
   content: '';
   position: absolute;
   bottom: -10px;
@@ -151,18 +141,15 @@ body {
   transform: translateX(-50%);
   border-width: 5px;
   border-style: solid;
-  border-color: #ffcccc transparent transparent transparent; /* Cambia el orden de los colores */
+  border-color: #ffcccc transparent transparent transparent; 
 }
-
 .form-label-alta{
   justify-content: left !important;
   align-items: left !important;
 }
-
 .campo-obligatorio {
   color: red;
 }
-
 .custom-select {
   width: 100%;
 }
@@ -172,19 +159,16 @@ body {
 .label-with-arrow {
   position: relative;
 }
-
 .label-with-arrow select {
-  padding-right: 30px; /* Espacio para la flecha */
+  padding-right: 30px; 
 }
-
 .label-with-arrow svg {
   position: absolute;
   top: 50%;
-  right: 5px; /* Ajusta el espacio entre el texto y la flecha */
+  right: 5px; 
   transform: translateY(-50%);
-  fill: currentColor; /* Usa el color actual del texto para la flecha */
+  fill: currentColor; 
 }
-
 .btn-operacion{
   padding: 0.4em;
   color: #7ea56a;
@@ -215,18 +199,14 @@ body {
 .btn-guardar:hover {
   color: white;
 }
-
-/* Estilo para el texto "Opcional" */
 .optional-text {
-  color: gray; /* Texto en gris */
-  font-size: 14px; /* Tamaño de fuente opcional */
-  margin-left: 5px; /* Espacio a la izquierda del campo */
+  color: gray; 
+  font-size: 14px; 
+  margin-left: 5px; 
 }
-
 .btn-container {
   background-color: white;
-  padding: 1em; /* Ajusta el espaciado interior según sea necesario */
-  
+  padding: 1em;
 }
 .form-control{
   width: 11em !important;
@@ -241,22 +221,18 @@ body {
 .card-contenedor{
   background-color: #fff;
 }
-
 .nav-item {
   margin: 0 10px;
 }
-
 .nav-link {
   text-decoration: none;
   color: #ffff !important;
   padding: 10px;
   border-bottom: 3px solid transparent;
 }
-
 .nav-link:hover {
-  border-color: #FBD374; /* Cambia el color de borde al hacer hover */
+  border-color: #FBD374; 
 }
-
 .subtitulo{
   color: #7ea56a;
   font-size: 1.5em;
@@ -266,40 +242,34 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
 }
-
 .calendar-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
 }
-
 #prev-month, #next-month {
   cursor: pointer;
   font-size: 20px;
 }
-
 .calendar-table {
   width: 100%;
   border-collapse: collapse;
 }
-
 .calendar-table th {
   background-color: #f0f0f0;
   padding: 8px;
 }
-
 .calendar-table td {
   padding: 8px;
   border: 1px solid #ddd;
 }
-
 #month-year {
   font-size: 24px;
   font-weight: bold;
 }
+
 @media (max-width: 768px) {
-  /* Estilos CSS para pantallas más pequeñas */
   .label-form {
       font-size: 16px;
   }
@@ -333,9 +303,6 @@ body {
   max-width: 100px;
   margin-bottom: 10px;
 }
-
-
-/* Estilos generales para el modal */
 .modal {
     display: none;
     position: fixed;
@@ -347,8 +314,6 @@ body {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.7);
 }
-
-/* Estilos para el contenido del modal */
 .modal-content {
     background-color: #fff;
     margin: 15% auto;
@@ -356,8 +321,6 @@ body {
     border: 1px solid #888;
     width: 80%;
 }
-
-/* Estilos para el botón de cerrar */
 .close {
     float: right;
     cursor: pointer;
@@ -404,9 +367,8 @@ body {
   border: 1px solid #ddd;
 }
 .col-tabla {
-  width: 8%; /* Ajusta este valor según tus necesidades */
+  width: 8%;
 }
-/* Aplicar el estilo solo a las celdas con la clase "custom-column" */
 .td-table.custom-column {
   width: 100px; /* Ancho igual para todas las celdas estilizadas */
   word-wrap: break-word; /* Permite que el texto se divida en varias líneas si es necesario */
